--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite --port 7400",
+        "dev": "vite",
         "build": "vite build"
     },
     "devDependencies": {
