--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,18 @@
     },
     "routes": [
       {
+        "src": "/build/(.*)",
+        "dest": "/public/build/"
+      },
+      {
+        "src": "/resources/(.*)",
+        "dest": "/public/resources/"
+      },
+      {
+        "src": "/favicon/(.*)",
+        "dest": "/public/favicon/"
+      },
+      {
         "src": "/(.*)",
         "dest": "/api/index.php"
       }
