--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
     },
     "routes": [
       {
-        "src": "/build/(.*)",
-        "dest": "/public/build/"
+        "src": "/dist/(.*)",
+        "dest": "/public/dist/$1"
       },
       {
         "src": "/(.*)",
@@ -28,4 +28,4 @@
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "array"
     }
-  }
+}
