--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
     },
     "routes": [
       {
-        "src": "/public/build/(.*)",
-        "dest": "/public/build/$1"
+        "src": "/dist/(.*)",
+        "dest": "/public/dist/"
       },
       {
         "src": "/(.*)",
