--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
     },
     "routes": [
       {
-        "src": "/dist/(.*)",
-        "dest": "/public/dist/"
+        "src": "/build/(.*)",
+        "dest": "/public/build/"
       },
       {
         "src": "/(.*)",
