--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,7 @@
     "routes": [
       {
         "src": "/build/(.*)",
-        "dest": "/public/build/"
-      },
-      {
-        "src": "/build/(.*)",
-        "dest": "/"
+        "dest": "/public/assets/"
       },
       {
         "src": "/(.*)",
