--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production",
+        "dev": "vite", 
         "build": "vite build"
     },
     "devDependencies": {
